// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Frequencies renders CustomCron 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
    style="margin-top: 5px;"
  >
    <div
      class="euiFlexItem"
      style="margin-top: 0px;"
    >
      <div
        class="euiFormRow euiFormRow--compressed"
        id="cronExpression-form-row-row"
        style="margin-top: 0px;"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="cronExpression-form-row"
          >
            Run every
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <textarea
            class="euiTextArea euiTextArea--resizeVertical euiTextArea--compressed"
            data-test-subj="customCron_cronExpression_field"
            name="cronExpression"
            rows="3"
          >
            0 */1 * * *
          </textarea>
          <div
            class="euiFormHelpText euiFormRow__text"
            id="cronExpression-form-row-help-0"
          >
            <div
              class="euiText euiText--small"
            >
              Use 
              <a
                class="euiLink euiLink--primary"
                href="https://docs-beta.opensearch.org/monitoring-plugins/alerting/"
                rel="noopener noreferrer"
                target="_blank"
              >
                cron expressions
                <div>
                  EuiIconMock
                </div>
                <span
                  class="euiScreenReaderOnly"
                >
                  (opens in a new tab or window)
                </span>
              </a>
               for complex schedules
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem"
      style="margin-top: 0px;"
    >
      <div
        class="euiFormRow euiFormRow--compressed"
        id="timezone-form-row-row"
        style="margin-top: 0px;"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="euiComboBox euiComboBox--compressed"
            data-test-subj="timezoneComboBox"
            name="timezone"
            role="combobox"
          >
            <div
              class="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <div
                  class="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isClearable"
                  data-test-subj="comboBoxInput"
                  tabindex="-1"
                >
                  <p
                    class="euiComboBoxPlaceholder"
                  >
                    Select a timezone
                  </p>
                  <div
                    class="euiComboBox__input"
                    style="font-size: 14px; display: inline-block;"
                  >
                    <input
                      aria-controls=""
                      data-test-subj="comboBoxSearchInput"
                      id="timezone"
                      role="textbox"
                      style="box-sizing: content-box; width: 2px;"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
                <div
                  class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <button
                    aria-label="Open list of options"
                    class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                    data-test-subj="comboBoxToggleListButton"
                    type="button"
                  >
                    <div>
                      EuiIconMock
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Frequencies renders Frequency 1`] = `
<div>
  <div
    class="euiFormRow euiFormRow--compressed"
    id="frequency-form-row-row"
  >
    <div
      class="euiFormRow__labelWrapper"
    >
      <label
        aria-invalid="false"
        class="euiFormLabel euiFormRow__label"
        for="frequency-form-row"
      >
        Frequency
      </label>
    </div>
    <div
      class="euiFormRow__fieldWrapper"
    >
      <div
        class="euiFormControlLayout euiFormControlLayout--compressed"
      >
        <div
          class="euiFormControlLayout__childrenWrapper"
        >
          <select
            class="euiSelect euiSelect--compressed"
            data-test-subj="frequency_field"
            id="frequency"
            name="frequency"
          >
            <option
              value="interval"
            >
              By interval
            </option>
            <option
              value="daily"
            >
              Daily
            </option>
            <option
              value="weekly"
            >
              Weekly
            </option>
            <option
              value="monthly"
            >
              Monthly
            </option>
            <option
              value="cronExpression"
            >
              Custom cron expression
            </option>
          </select>
          <div
            class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
          >
            <span
              class="euiFormControlLayoutCustomIcon"
            >
              <div>
                EuiIconMock
              </div>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Frequencies renders FrequencyPicker 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiFormRow euiFormRow--compressed"
        id="period.interval-form-row-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="period.interval-form-row"
          >
            Run every
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldNumber euiFieldNumber--withIcon euiFieldNumber--compressed"
                data-test-subj="interval_interval_field"
                min="1"
                name="period.interval"
                type="number"
                value="1"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <div>
                    EuiIconMock
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem"
    >
      <div
        class="euiFormRow euiFormRow--hasEmptyLabelSpace euiFormRow--compressed"
        id="period.unit-form-row-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <select
                class="euiSelect euiSelect--compressed"
                data-test-subj="interval_unit_field"
                id="period.unit"
                name="period.unit"
              >
                <option
                  value="MINUTES"
                >
                  Minute(s)
                </option>
                <option
                  value="HOURS"
                >
                  Hours
                </option>
                <option
                  value="DAYS"
                >
                  Days
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <div>
                    EuiIconMock
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Frequencies renders Interval 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterMedium euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiFormRow euiFormRow--compressed"
        id="period.interval-form-row-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="period.interval-form-row"
          >
            Run every
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldNumber euiFieldNumber--withIcon euiFieldNumber--compressed"
                data-test-subj="interval_interval_field"
                min="1"
                name="period.interval"
                type="number"
                value="1"
              />
              <div
                class="euiFormControlLayoutIcons"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <div>
                    EuiIconMock
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem"
    >
      <div
        class="euiFormRow euiFormRow--hasEmptyLabelSpace euiFormRow--compressed"
        id="period.unit-form-row-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <select
                class="euiSelect euiSelect--compressed"
                data-test-subj="interval_unit_field"
                id="period.unit"
                name="period.unit"
              >
                <option
                  value="MINUTES"
                >
                  Minute(s)
                </option>
                <option
                  value="HOURS"
                >
                  Hours
                </option>
                <option
                  value="DAYS"
                >
                  Days
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <div>
                    EuiIconMock
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Frequencies renders Monthly 1`] = `
<div>
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--alignItemsFlexStart euiFlexGroup--directionRow euiFlexGroup--responsive"
  >
    <div
      class="euiFlexItem"
    >
      <div
        class="euiFormRow euiFormRow--compressed"
        id="monthly.type-form-row-row"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            aria-invalid="false"
            class="euiFormLabel euiFormRow__label"
            for="monthly.type-form-row"
          >
            On the
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <select
                class="euiSelect euiSelect--compressed"
                id="monthly.type"
                name="monthly.type"
              >
                <option
                  value="day"
                >
                  Day
                </option>
              </select>
              <div
                class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
              >
                <span
                  class="euiFormControlLayoutCustomIcon"
                >
                  <div>
                    EuiIconMock
                  </div>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem"
    >
      <div
        class="euiFormRow euiFormRow--hasEmptyLabelSpace euiFormRow--compressed"
        id="monthly.day-form-row-row"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            class="euiFormControlLayout euiFormControlLayout--compressed"
          >
            <div
              class="euiFormControlLayout__childrenWrapper"
            >
              <input
                class="euiFieldNumber euiFieldNumber--compressed"
                max="31"
                min="1"
                name="monthly.day"
                type="number"
                value="1"
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--xs"
  />
  <div
    class="euiFlexGroup euiFlexGroup--gutterLarge euiFlexGroup--directionColumn euiFlexGroup--responsive"
    style="margin-top: 5px;"
  >
    <div
      class="euiFlexItem"
      style="margin-top: 0px;"
    >
      <div
        class="euiFormRow"
        id="generated-id-row"
        style="margin-top: 0px;"
      >
        <div
          class="euiFormRow__labelWrapper"
        >
          <label
            class="euiFormLabel euiFormRow__label"
            for="generated-id"
          >
            Around
          </label>
        </div>
        <div
          class="euiFormRow__fieldWrapper"
        >
          <span>
            <span
              class="euiDatePicker euiDatePicker--shadow"
            >
              <div
                class="euiFormControlLayout"
              >
                <div
                  class="euiFormControlLayout__childrenWrapper"
                >
                  <div
                    class="react-datepicker-wrapper"
                  >
                    <div
                      class="react-datepicker__input-container"
                    >
                      <input
                        aria-label="Press the down key to open a popover containing a calendar."
                        class="euiDatePicker euiFieldText euiFieldText--withIcon"
                        id="generated-id"
                        name="daily"
                        type="text"
                        value="12:00 AM"
                      />
                    </div>
                  </div>
                  <div
                    class="euiFormControlLayoutIcons"
                  >
                    <span
                      class="euiFormControlLayoutCustomIcon"
                    >
                      <div>
                        EuiIconMock
                      </div>
                    </span>
                  </div>
                </div>
              </div>
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem"
      style="margin-top: 0px;"
    >
      <div
        class="euiFormRow euiFormRow--compressed"
        id="timezone-form-row-row"
        style="margin-top: 0px;"
      >
        <div
          class="euiFormRow__fieldWrapper"
        >
          <div
            aria-expanded="false"
            aria-haspopup="listbox"
            class="euiComboBox euiComboBox--compressed"
            data-test-subj="timezoneComboBox"
            name="timezone"
            role="combobox"
          >
            <div
              class="euiFormControlLayout euiFormControlLayout--compressed"
            >
              <div
                class="euiFormControlLayout__childrenWrapper"
              >
                <div
                  class="euiComboBox__inputWrap euiComboBox__inputWrap--compressed euiComboBox__inputWrap--noWrap euiComboBox__inputWrap-isClearable"
                  data-test-subj="comboBoxInput"
                  tabindex="-1"
                >
                  <p
                    class="euiComboBoxPlaceholder"
                  >
                    Select a timezone
                  </p>
                  <div
                    class="euiComboBox__input"
                    style="font-size: 14px; display: inline-block;"
                  >
                    <input
                      aria-controls=""
                      data-test-subj="comboBoxSearchInput"
                      id="timezone"
                      role="textbox"
                      style="box-sizing: content-box; width: 2px;"
                      value=""
                    />
                    <div
                      style="position: absolute; top: 0px; left: 0px; visibility: hidden; height: 0px; overflow: scroll; white-space: pre; font-family: -webkit-small-control; letter-spacing: normal; text-transform: none;"
                    />
                  </div>
                </div>
                <div
                  class="euiFormControlLayoutIcons euiFormControlLayoutIcons--right"
                >
                  <button
                    aria-label="Open list of options"
                    class="euiFormControlLayoutCustomIcon euiFormControlLayoutCustomIcon--clickable"
                    data-test-subj="comboBoxToggleListButton"
                    type="button"
                  >
                    <div>
                      EuiIconMock
                    </div>
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
